// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with empty props 1`] = `
<div
  className="monday-style-clickable monday-style-clickable--disable-text-selection"
  data-testid="clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
/>
`;

exports[`renders correctly with props 1`] = `
<div
  className="monday-style-clickable monday-style_tests-class"
  data-testid="clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="banner"
  tabIndex="0"
>
  Children text
</div>
`;
